agregado listado de productos con gridverticalmanager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
         Te damos la Bienvenida a Mama Help,
         \nProductos de calidad y excelencia en servicio!!"
     </string>
+    <string name="precio">S/. %1$s</string>
 </resources>
